--- a/metadata.yaml
+++ b/metadata.yaml
@@ -45,5 +45,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'French fiction -- 19th century'
 - !lcc 'PQ'
+- GITenberg
 title: Lélia
 url: http://www.gutenberg.org/ebooks/39738
